@@ -26,7 +26,6 @@ Jython:
 	Syntax highlighting for script editor
 	Import/export scripts as text files
 	Autoindent in script editor
-*	Associate each console window with a file and close it with that file
 	Compile and run open libraries.
 
 Main Window:
